# CwisarDHplus

./: CMakeLists.txt  README.md  colorproc.cpp  colorproc.hpp  comparator.cpp  comparator.hpp  cv_util.cpp  cv_util.hpp  main.cpp  wisard.cpp  wisard.hpp  wnet_lib.cpp  wnet_lib.hpp
bswisard2.0_omp/: bswisard2_0_omp.1  main.c
bswisard2.0_omp.xcodeproj/: project.pbxproj
